tests/errors/other/test_tc_other_06_import_selective_undef.pc
#import std.console.(nonexistent)
int main() {
    nonexistent();
}
